--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "socket": "tsx server/socket.ts"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -42,6 +43,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@wojtekmaj/react-hooks": "^1.21.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -53,13 +55,16 @@
     "eslint-config-next": "13.5.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
-    "next": "13.5.1",
+    "next": "^15.1.3",
     "next-themes": "^0.3.0",
+    "pdfjs-dist": "^4.9.155",
     "postcss": "8.4.30",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-pdf": "^9.2.1",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "socket.io": "^4.7.5",
